--- a/index.html
+++ b/index.html
@@ -27,7 +27,21 @@
                 </nav>
                 <a href="#" class="button button--header">Get Started</a>
             </div>
-
+            <div class="burger-menu">
+                <input id="menu__toggle" type="checkbox" />
+                <label class="menu__btn" for="menu__toggle">
+                    <span></span>
+                </label>
+                <div class="menu__box">
+                    <a class="menu__item" href="#">Home</a>
+                    <a class="menu__item" href="#">Your benefits</a>
+                    <a class="menu__item" href="#">Our process</a>
+                    <a class="menu__item" href="#">Our works</a>
+                    <a class="menu__item" href="#">Testimonials</a>
+                    <a class="menu__item" href="#">Start a project</a>
+                    <div class="item-btn"><a class="menu__item-btn">Get Started</a></div>
+                </div>
+            </div>
         </header>
         <div class="container">
             <main class="main">
@@ -121,7 +135,7 @@
                         <div class="card__content">
                             <img src="img/icon-tracking.png" alt="Folder" class="card__logo">
                             <h3 class="card__title">Data tracking</h3>
-                            <p class="process-card__description">The hardware and software, which when used together allows <br> you to know where something is at any point in time
+                            <p class="process-card__description">The hardware and software, which when used together allows you to know where something is at any point in time
                             </p>
                         </div>
                     </article>
