--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             </main>
         </div>
     </div>
+
     <div class="features-wrapper">
         <section class="features">
             <div class="container">
@@ -108,6 +109,7 @@
             </div>
         </section>
     </div>
+
     <div class="process-wrapper">
         <div class="container">
             <section class="process">
@@ -122,7 +124,8 @@
                         <div class="card__content">
                             <img src="img/icon-audit.svg" alt="Search" class="card__logo">
                             <h3 class="card__title">Business Audit</h3>
-                            <p class="process-card__description">An audit examines your business's financial records to verify
+                            <p class="process-card__description">An audit examines your business's financial records to
+                                verify
                                 they
                                 are accurate. This is done through a systematic review of your transactions.
                             </p>
@@ -135,7 +138,8 @@
                         <div class="card__content">
                             <img src="img/icon-tracking.png" alt="Folder" class="card__logo">
                             <h3 class="card__title">Data tracking</h3>
-                            <p class="process-card__description">The hardware and software, which when used together allows you to know where something is at any point in time
+                            <p class="process-card__description">The hardware and software, which when used together
+                                allows you to know where something is at any point in time
                             </p>
                         </div>
                     </article>
@@ -146,7 +150,8 @@
                         <div class="card__content">
                             <img src="img/icon-results.svg" alt="document" class="card__logo">
                             <h3 class="card__title">Results</h3>
-                            <p class="process-card__description">An audit examines your business's financial records to verify they are accurate. This is done through a systematic review of your transactions. 
+                            <p class="process-card__description">An audit examines your business's financial records to
+                                verify they are accurate. This is done through a systematic review of your transactions.
                             </p>
                         </div>
                     </article>
@@ -154,27 +159,29 @@
             </section>
         </div>
     </div>
+
     <div class="container">
         <section class="brands">
             <p class="brands--paragraph paragraph">brands</p>
             <h2 class="brands-title">We work with thousands of the world’s leading brands
             </h2>
             <div class="list-companies">
-                <img src="img/mazda.svg" alt="mazda" class="logo__company">
-                <img src="img/atlassian.svg" alt="atlassian" class="logo__company">
-                <img src="img/smashing.svg" alt="smashing" class="logo__company">
-                <img src="img/qantas.svg" alt="qantas" class="logo__company">
-                <img src="img/buysell.svg" alt="buysellads" class="logo__company">
-                <img src="img/nitro.svg" alt="nitro" class="logo__company">
-                <img src="img/cssmania.svg" alt="cssmania" class="logo__company">
-                <img src="img/popsugar.svg" alt="popsugar" class="logo__company">
-                <img src="img/talent.svg" alt="talentbin" class="logo__company">
-                <img src="img/civicrm.svg" alt="civicrm" class="logo__company">
+                <a href="#"> <img src="img/mazda.svg" alt="mazda" class="logo__company"></a>
+                <a href="#"><img src="img/atlassian.svg" alt="atlassian" class="logo__company"></a>
+                <a href="#"> <img src="img/smashing.svg" alt="smashing" class="logo__company"></a>
+                <a href="#"><img src="img/qantas.svg" alt="qantas" class="logo__company"></a>
+                <a href="#"> <img src="img/buysell.svg" alt="buysellads" class="logo__company"></a>
+                <a href="#"><img src="img/nitro.svg" alt="nitro" class="logo__company"></a>
+                <a href="#"><img src="img/cssmania.svg" alt="cssmania" class="logo__company"></a>
+                <a href="#"><img src="img/popsugar.svg" alt="popsugar" class="logo__company"></a>
+                <a href="#"><img src="img/talent.svg" alt="talentbin" class="logo__company"></a>
+                <a href="#"> <img src="img/civicrm.svg" alt="civicrm" class="logo__company"></a>
             </div>
             <p class="brands-description">You're going to be in good company. We work with world's leading brands.
             </p>
         </section>
     </div>
+
     <div class="start-wrapper">
         <div class="container">
             <section class="start">
@@ -191,6 +198,7 @@
             </section>
         </div>
     </div>
+    
     <footer class="footer-wrapper">
         <div class="container">
             <div class="footer-content">
