--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <div class="header-content">
                 <div class="logo header--logo">
-                    <a href="#"><img src="/img/logo.svg" alt="#"></a>
+                    <a href="#"><img src="img/logo.svg" alt="#"></a>
                 </div>
                 <nav class="navigation navigation--header">
                     <a href="#" class="nav-item">Home</a>
@@ -198,12 +198,12 @@
             </section>
         </div>
     </div>
-    
+
     <footer class="footer-wrapper">
         <div class="container">
             <div class="footer-content">
                 <div class="logo footer--logo">
-                    <a class="footer-logo" href="#"><img src="/img/logo.svg" alt="#"></a>
+                    <a class="footer-logo" href="#"><img src="img/logo.svg" alt="#"></a>
                 </div>
                 <nav class="navigation navigation--footer">
                     <a href="#" class="nav-item">Home</a>
